app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: __APP_NAME__-svc
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
